# rust-starter

./: Cargo.toml
.cargo/: config  config.toml
src/: main.rs
