[package]
name = "rust-starter-1"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
panic-halt = "0.2.0"
cortex-m-rt = "0.7.1"
cortex-m = "0.7.6"
stm32f4xx-hal = {version= "0.13.2", features=["stm32f411"]}