[package]
name = "rust-starter-1"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
panic-halt = "0.2.0"
panic-probe = { version = "0.2", features = ["print-rtt"] }
cortex-m-rt = "0.7.1"
cortex-m = "0.7.6"
stm32f4xx-hal = {version= "0.13.2", features=["stm32f411"]}
rtt-target = { version = "0.3.1", features = ["cortex-m"]}

# cargo build/run
[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true # <-
incremental = false
opt-level = 3 # <-
overflow-checks = true # <-

# cargo build/run --release
[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false # <-
incremental = false
# NOTE disabled to work around issue rust-lang/rust#90357
# the bug results in log messages not having location information
# (the line printed below the log message that contains the file-line location)
# lto = 'fat'
opt-level = 3 # <-
overflow-checks = false # <-
